sorted cities and favdrink alignment bugfix

--- a/src/SendGiftWizard/sass/fav-drink.scss
+++ b/src/SendGiftWizard/sass/fav-drink.scss
@@ -1,5 +1,9 @@
 @import "./../../sass/base.scss";
 
+@mixin genreItemMargin($w, $n) {
+  margin: 10px calc(((100% - #{$w} * #{$n} * 1px) / #{$n}) / 2);
+}
+
 #send-gift-drink {
   .paper {
     padding: 20px;
@@ -18,7 +22,7 @@
     padding: 0 0 20px 0;
     margin-top: 20px;
     .col {
-      margin: 10px;
+      @include genreItemMargin(135, 5)
     }
   }
 
@@ -57,13 +61,30 @@
   // }
 }
 
+@media only screen and (max-width: $md) {
+  #send-gift-drink .flex-grid {
+    width: 90%;
+    .col {
+      @include genreItemMargin(135, 4)
+    }
+  }
+}
+
 @media only screen and (max-width: $sm) {
   #send-gift-drink .flex-grid {
     width: 100%;
     justify-content: space-around;
     .col {
-      margin: 0;
-      margin-bottom: 10px;
+      @include genreItemMargin(135, 3)
+    }
+  }
+}
+
+@media only screen and (max-width: $xs) {
+  #send-gift-drink .flex-grid  {
+    width: 100%;
+    .col {
+      @include genreItemMargin(135, 2)
     }
   }
 }
